--- a/json/scraper_config.json
+++ b/json/scraper_config.json
@@ -3,9 +3,15 @@
   "subreddit": "AITAH",
   "keyword": "",
   "filters": {
-    "num_posts": 2,
+    "num_posts": 1,
     "time_range": "week",
     "sort_by": "top",
-    "nsfw": true
+    "nsfw": false,
+    "screenshot": true
+  },
+  "comments": {
+    "get_comments": true,
+    "comment_limit": 5,
+    "screenshot": true
   }
 }
